# Dynamical-Regimes-of-Diffusion-Models

./: .gitignore  .gitmodules  README.md  hello.py  pyproject.toml  recap_tikz.tex  report.tex
beamer_reports/: beamer.tex  brownian.md  generate_brownian.py  recap_tikz.tex  report.tex  write_in_tikz.py
eap2_diffusion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
former/codebases/: dynamical.md  dynamical.tex  notes.md
models/2dvolumetricanim/: anim.py
models/cifar_entropy/: cifar_entropy.py
models/collapsetime/: tc_vs_alpha.py
models/linear/: entropy_exact.py  linear_mnist.ipynb  linear_mnist.py
models/manifoldrandom/: viz.py
models/potentials/: anim.py  potentialviz.py
refs/biroli/: birolinotes.md
refs/mezardmanifold/: notes.md
refs/seance/: 18.md
results/hierarchical/: plot_potential.py
tests/: test_cupy.py  test_torch.py
