[project]
name = "eap2-diffusion"
version = "0.1.0"
description = "Diffusion models for EAP2"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {  } # "QR1" = "models/QR1/", "QR2" = "models/QR2/"
packages = [  ] # ["QR1", "QR2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
